fixed large QR Code vertical scroll on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,6 @@
 #submitBtn{
     margin: 0 auto !important;
 }
+#qrcode > img{
+    max-width: 100% !important;
+}
